cmake_minimum_required(VERSION 3.16)
project(vcraft)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(lib/fmt)

include_directories(.)
include_directories(src)
include_directories(lib)
include_directories(lib/fmt/include)

function(add_shaders TARGET)
    set(SPIRV_BINARY_FILES)
    foreach(SOURCE_FILE ${ARGN})
        set(SPIRV "${SOURCE_FILE}.spv")
        add_custom_command(
                OUTPUT ${SPIRV}
#                COMMAND ${CMAKE_COMMAND} -E make_directory "${PROJECT_BINARY_DIR}/shaders/"
                COMMAND glslc ${SOURCE_FILE} -o ${SPIRV}
                DEPENDS ${SOURCE_FILE}
                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
        list(APPEND SPIRV_BINARY_FILES ${SPIRV})
    endforeach(SOURCE_FILE)

    add_custom_target(${TARGET} DEPENDS ${SPIRV_BINARY_FILES})
endfunction()

add_shaders(shaders
    assets/shaders/entity.frag
    assets/shaders/entity.vert
)

add_library(imgui STATIC
    lib/imgui/imconfig.h
    lib/imgui/imgui.h
    lib/imgui/imgui.cpp
    lib/imgui/imgui_demo.cpp
    lib/imgui/imgui_draw.cpp
    lib/imgui/imgui_internal.h
    lib/imgui/imgui_widgets.cpp
    lib/imgui/imstb_rectpack.h
    lib/imgui/imstb_textedit.h
    lib/imgui/imstb_truetype.h)

add_executable(vcraft
    main.cpp
    src/client/util/stb_image.hpp
    src/client/renderer/texture/Texture.hpp
    main.cpp
    console.hpp
    src/client/util/stb_image.cpp
    src/client/gui/gui.cpp
    src/client/gui/gui.hpp
    src/client/util/MemoryAllocator.hpp
    src/client/util/MemoryAllocator.cpp
    src/client/renderer/RenderSystem.hpp
    src/client/util/CommandPool.hpp
    src/client/renderer/RenderBuffer.hpp
    src/resources/ResourceManager.hpp
    src/client/util/Buffer.hpp
    src/client/renderer/texture/Texture.hpp
    src/client/util/DescriptorPool.hpp
    src/client/Input.hpp
    src/client/GameWindow.hpp
    src/client/Clock.hpp
    src/client/util/Json.hpp
    src/client/Mouse.hpp
    src/client/Keyboard.hpp
    src/client/renderer/model/ModelRenderer.hpp
        src/client/renderer/RotData.hpp
    VertexBuilder.hpp
    src/util/math/vec3.hpp
    src/util/math/vec2.hpp
    src/util/math/vec4.hpp
    src/util/math/vec.hpp
    src/client/renderer/Tessellator.hpp
    src/client/renderer/BlockTessellator.hpp
    src/util/math/AABB.hpp
    src/client/renderer/TextureUVCoordinateSet.hpp
    src/world/tile/Tile.hpp
        src/client/renderer/entity/EntityRenderer.hpp
        src/client/renderer/model/ParsedModelGeometry.hpp
        src/client/renderer/model/ParsedGeometryBoneNode.hpp
        src/client/renderer/model/ParsedGeometryBoneElement.hpp
    src/client/renderer/PositionTextureVertex.hpp
    src/client/renderer/TexturedQuad.hpp
    src/client/renderer/model/ModelBox.hpp
    src/client/renderer/RenderContext.hpp
    src/client/renderer/texture/TextureManager.hpp
    src/util/ResourceLocation.hpp
    src/resources/ResourcePack.hpp
    src/client/renderer/material/Material.hpp
    src/client/AppPlatform.hpp
    src/world/tile/Tile.cpp src/util/math/TilePos.hpp
    src/world/tile/AcaciaButtonTile.hpp
    src/world/tile/AcaciaButtonTile.cpp
    src/world/tile/AcaciaDoorTile.hpp
    src/world/tile/AcaciaDoorTile.cpp
    src/world/tile/AcaciaFenceGateTile.hpp
    src/world/tile/AcaciaFenceGateTile.cpp
    src/world/tile/AcaciaPressurePlateTile.hpp
    src/world/tile/AcaciaPressurePlateTile.cpp
    src/world/tile/AcaciaStairsTile.hpp
    src/world/tile/AcaciaStairsTile.cpp
    src/world/tile/AcaciaStandingSignTile.hpp
    src/world/tile/AcaciaStandingSignTile.cpp
    src/world/tile/AcaciaTrapdoorTile.hpp
    src/world/tile/AcaciaTrapdoorTile.cpp
    src/world/tile/AcaciaWallSignTile.hpp
    src/world/tile/AcaciaWallSignTile.cpp
    src/world/tile/ActivatorRailTile.hpp
    src/world/tile/ActivatorRailTile.cpp
    src/world/tile/AirTile.hpp
    src/world/tile/AirTile.cpp
    src/world/tile/AllowTile.hpp
    src/world/tile/AllowTile.cpp
    src/world/tile/AndesiteStairsTile.hpp
    src/world/tile/AndesiteStairsTile.cpp
    src/world/tile/AnvilTile.hpp
    src/world/tile/AnvilTile.cpp
    src/world/tile/BambooSaplingTile.hpp
    src/world/tile/BambooSaplingTile.cpp
    src/world/tile/BambooTile.hpp
    src/world/tile/BambooTile.cpp
    src/world/tile/BarrelTile.hpp
    src/world/tile/BarrelTile.cpp
    src/world/tile/BarrierTile.hpp
    src/world/tile/BarrierTile.cpp
    src/world/tile/BeaconTile.hpp
    src/world/tile/BeaconTile.cpp
    src/world/tile/BedrockTile.hpp
    src/world/tile/BedrockTile.cpp
    src/world/tile/BedTile.hpp
    src/world/tile/BedTile.cpp
    src/world/tile/BeetrootTile.hpp
    src/world/tile/BeetrootTile.cpp
    src/world/tile/BellTile.hpp
    src/world/tile/BellTile.cpp
    src/world/tile/BirchButtonTile.hpp
    src/world/tile/BirchButtonTile.cpp
    src/world/tile/BirchDoorTile.hpp
    src/world/tile/BirchDoorTile.cpp
    src/world/tile/BirchFenceGateTile.hpp
    src/world/tile/BirchFenceGateTile.cpp
    src/world/tile/BirchPressurePlateTile.hpp
    src/world/tile/BirchPressurePlateTile.cpp
    src/world/tile/BirchStairsTile.hpp
    src/world/tile/BirchStairsTile.cpp
    src/world/tile/BirchStandingSignTile.hpp
    src/world/tile/BirchStandingSignTile.cpp
    src/world/tile/BirchTrapdoorTile.hpp
    src/world/tile/BirchTrapdoorTile.cpp
    src/world/tile/BirchWallSignTile.hpp
    src/world/tile/BirchWallSignTile.cpp
    src/world/tile/BlackGlazedTerracottaTile.hpp
    src/world/tile/BlackGlazedTerracottaTile.cpp
    src/world/tile/BlastFurnaceTile.hpp
    src/world/tile/BlastFurnaceTile.cpp
    src/world/tile/BlueGlazedTerracottaTile.hpp
    src/world/tile/BlueGlazedTerracottaTile.cpp
    src/world/tile/BlueIceTile.hpp
    src/world/tile/BlueIceTile.cpp
    src/world/tile/BoneBlockTile.hpp
    src/world/tile/BoneBlockTile.cpp
    src/world/tile/BookshelfTile.hpp
    src/world/tile/BookshelfTile.cpp
    src/world/tile/BorderBlockTile.hpp
    src/world/tile/BorderBlockTile.cpp
    src/world/tile/BrewingStandTile.hpp
    src/world/tile/BrewingStandTile.cpp
    src/world/tile/BrickBlockTile.hpp
    src/world/tile/BrickBlockTile.cpp
    src/world/tile/BrickStairsTile.hpp
    src/world/tile/BrickStairsTile.cpp
    src/world/tile/BrownGlazedTerracottaTile.hpp
    src/world/tile/BrownGlazedTerracottaTile.cpp
    src/world/tile/BrownMushroomBlockTile.hpp
    src/world/tile/BrownMushroomBlockTile.cpp
    src/world/tile/BrownMushroomTile.hpp
    src/world/tile/BrownMushroomTile.cpp
    src/world/tile/BubbleColumnTile.hpp
    src/world/tile/BubbleColumnTile.cpp
    src/world/tile/CactusTile.hpp
    src/world/tile/CactusTile.cpp
    src/world/tile/CakeTile.hpp
    src/world/tile/CakeTile.cpp
    src/world/tile/CameraTile.hpp
    src/world/tile/CameraTile.cpp
    src/world/tile/CampfireTile.hpp
    src/world/tile/CampfireTile.cpp
    src/world/tile/CarpetTile.hpp
    src/world/tile/CarpetTile.cpp
    src/world/tile/CarrotsTile.hpp
    src/world/tile/CarrotsTile.cpp
    src/world/tile/CartographyTableTile.hpp
    src/world/tile/CartographyTableTile.cpp
    src/world/tile/CarvedPumpkinTile.hpp
    src/world/tile/CarvedPumpkinTile.cpp
    src/world/tile/CauldronTile.hpp
    src/world/tile/CauldronTile.cpp
    src/world/tile/ChainCommandBlockTile.hpp
    src/world/tile/ChainCommandBlockTile.cpp
    src/world/tile/ChestTile.hpp
    src/world/tile/ChestTile.cpp
    src/world/tile/ChorusFlowerTile.hpp
    src/world/tile/ChorusFlowerTile.cpp
    src/world/tile/ChorusPlantTile.hpp
    src/world/tile/ChorusPlantTile.cpp
    src/world/tile/ClayTile.hpp
    src/world/tile/ClayTile.cpp
    src/world/tile/CoalBlockTile.hpp
    src/world/tile/CoalBlockTile.cpp
    src/world/tile/CoalOreTile.hpp
    src/world/tile/CoalOreTile.cpp
    src/world/tile/CobblestoneTile.hpp
    src/world/tile/CobblestoneTile.cpp
    src/world/tile/CobblestoneWallTile.hpp
    src/world/tile/CobblestoneWallTile.cpp
    src/world/tile/CocoaTile.hpp
    src/world/tile/CocoaTile.cpp
    src/world/tile/CommandBlockTile.hpp
    src/world/tile/CommandBlockTile.cpp
    src/world/tile/ComposterTile.hpp
    src/world/tile/ComposterTile.cpp
    src/world/tile/ConcretepowderTile.hpp
    src/world/tile/ConcretepowderTile.cpp
    src/world/tile/ConcreteTile.hpp
    src/world/tile/ConcreteTile.cpp
    src/world/tile/ConduitTile.hpp
    src/world/tile/ConduitTile.cpp
    src/world/tile/CoralBlockTile.hpp
    src/world/tile/CoralBlockTile.cpp
    src/world/tile/CoralFanDeadTile.hpp
    src/world/tile/CoralFanDeadTile.cpp
    src/world/tile/CoralFanHang2Tile.hpp
    src/world/tile/CoralFanHang2Tile.cpp
    src/world/tile/CoralFanHang3Tile.hpp
    src/world/tile/CoralFanHang3Tile.cpp
    src/world/tile/CoralFanHangTile.hpp
    src/world/tile/CoralFanHangTile.cpp
    src/world/tile/CoralFanTile.hpp
    src/world/tile/CoralFanTile.cpp
    src/world/tile/CoralTile.hpp
    src/world/tile/CoralTile.cpp
    src/world/tile/CraftingTableTile.hpp
    src/world/tile/CraftingTableTile.cpp
    src/world/tile/CyanGlazedTerracottaTile.hpp
    src/world/tile/CyanGlazedTerracottaTile.cpp
    src/world/tile/DarkOakButtonTile.hpp
    src/world/tile/DarkOakButtonTile.cpp
    src/world/tile/DarkOakDoorTile.hpp
    src/world/tile/DarkOakDoorTile.cpp
    src/world/tile/DarkOakFenceGateTile.hpp
    src/world/tile/DarkOakFenceGateTile.cpp
    src/world/tile/DarkOakPressurePlateTile.hpp
    src/world/tile/DarkOakPressurePlateTile.cpp
    src/world/tile/DarkOakStairsTile.hpp
    src/world/tile/DarkOakStairsTile.cpp
    src/world/tile/DarkoakStandingSignTile.hpp
    src/world/tile/DarkoakStandingSignTile.cpp
    src/world/tile/DarkOakTrapdoorTile.hpp
    src/world/tile/DarkOakTrapdoorTile.cpp
    src/world/tile/DarkoakWallSignTile.hpp
    src/world/tile/DarkoakWallSignTile.cpp
    src/world/tile/DarkPrismarineStairsTile.hpp
    src/world/tile/DarkPrismarineStairsTile.cpp
    src/world/tile/DaylightDetectorInvertedTile.hpp
    src/world/tile/DaylightDetectorInvertedTile.cpp
    src/world/tile/DaylightDetectorTile.hpp
    src/world/tile/DaylightDetectorTile.cpp
    src/world/tile/DeadbushTile.hpp
    src/world/tile/DeadbushTile.cpp
    src/world/tile/DenyTile.hpp
    src/world/tile/DenyTile.cpp
    src/world/tile/DetectorRailTile.hpp
    src/world/tile/DetectorRailTile.cpp
    src/world/tile/DiamondBlockTile.hpp
    src/world/tile/DiamondBlockTile.cpp
    src/world/tile/DiamondOreTile.hpp
    src/world/tile/DiamondOreTile.cpp
    src/world/tile/DioriteStairsTile.hpp
    src/world/tile/DioriteStairsTile.cpp
    src/world/tile/DirtTile.hpp
    src/world/tile/DirtTile.cpp
    src/world/tile/DispenserTile.hpp
    src/world/tile/DispenserTile.cpp
    src/world/tile/DoublePlantTile.hpp
    src/world/tile/DoublePlantTile.cpp
    src/world/tile/DoubleStoneSlab2Tile.hpp
    src/world/tile/DoubleStoneSlab2Tile.cpp
    src/world/tile/DoubleStoneSlab3Tile.hpp
    src/world/tile/DoubleStoneSlab3Tile.cpp
    src/world/tile/DoubleStoneSlab4Tile.hpp
    src/world/tile/DoubleStoneSlab4Tile.cpp
    src/world/tile/DoubleStoneSlabTile.hpp
    src/world/tile/DoubleStoneSlabTile.cpp
    src/world/tile/DoubleWoodenSlabTile.hpp
    src/world/tile/DoubleWoodenSlabTile.cpp
    src/world/tile/DragonEggTile.hpp
    src/world/tile/DragonEggTile.cpp
    src/world/tile/DriedKelpBlockTile.hpp
    src/world/tile/DriedKelpBlockTile.cpp
    src/world/tile/DropperTile.hpp
    src/world/tile/DropperTile.cpp
    src/world/tile/EmeraldBlockTile.hpp
    src/world/tile/EmeraldBlockTile.cpp
    src/world/tile/EmeraldOreTile.hpp
    src/world/tile/EmeraldOreTile.cpp
    src/world/tile/EnchantingTableTile.hpp
    src/world/tile/EnchantingTableTile.cpp
    src/world/tile/EndBrickStairsTile.hpp
    src/world/tile/EndBrickStairsTile.cpp
    src/world/tile/EndBricksTile.hpp
    src/world/tile/EndBricksTile.cpp
    src/world/tile/EnderChestTile.hpp
    src/world/tile/EnderChestTile.cpp
    src/world/tile/EndGatewayTile.hpp
    src/world/tile/EndGatewayTile.cpp
    src/world/tile/EndPortalFrameTile.hpp
    src/world/tile/EndPortalFrameTile.cpp
    src/world/tile/EndPortalTile.hpp
    src/world/tile/EndPortalTile.cpp
    src/world/tile/EndRodTile.hpp
    src/world/tile/EndRodTile.cpp
    src/world/tile/EndStoneTile.hpp
    src/world/tile/EndStoneTile.cpp
    src/world/tile/FarmlandTile.hpp
    src/world/tile/FarmlandTile.cpp
    src/world/tile/FenceGateTile.hpp
    src/world/tile/FenceGateTile.cpp
    src/world/tile/FenceTile.hpp
    src/world/tile/FenceTile.cpp
    src/world/tile/FireTile.hpp
    src/world/tile/FireTile.cpp
    src/world/tile/FletchingTableTile.hpp
    src/world/tile/FletchingTableTile.cpp
    src/world/tile/FlowerPotTile.hpp
    src/world/tile/FlowerPotTile.cpp
    src/world/tile/FlowingLavaTile.hpp
    src/world/tile/FlowingLavaTile.cpp
    src/world/tile/FlowingWaterTile.hpp
    src/world/tile/FlowingWaterTile.cpp
    src/world/tile/FormatVersionTile.hpp
    src/world/tile/FormatVersionTile.cpp
    src/world/tile/FrameTile.hpp
    src/world/tile/FrameTile.cpp
    src/world/tile/FrostedIceTile.hpp
    src/world/tile/FrostedIceTile.cpp
    src/world/tile/FurnaceTile.hpp
    src/world/tile/FurnaceTile.cpp
    src/world/tile/GlassPaneTile.hpp
    src/world/tile/GlassPaneTile.cpp
    src/world/tile/GlassTile.hpp
    src/world/tile/GlassTile.cpp
    src/world/tile/GlowingobsidianTile.hpp
    src/world/tile/GlowingobsidianTile.cpp
    src/world/tile/GlowstoneTile.hpp
    src/world/tile/GlowstoneTile.cpp
    src/world/tile/GoldBlockTile.hpp
    src/world/tile/GoldBlockTile.cpp
    src/world/tile/GoldenRailTile.hpp
    src/world/tile/GoldenRailTile.cpp
    src/world/tile/GoldOreTile.hpp
    src/world/tile/GoldOreTile.cpp
    src/world/tile/GraniteStairsTile.hpp
    src/world/tile/GraniteStairsTile.cpp
    src/world/tile/GrassPathTile.hpp
    src/world/tile/GrassPathTile.cpp
    src/world/tile/GrassTile.hpp
    src/world/tile/GrassTile.cpp
    src/world/tile/GravelTile.hpp
    src/world/tile/GravelTile.cpp
    src/world/tile/GrayGlazedTerracottaTile.hpp
    src/world/tile/GrayGlazedTerracottaTile.cpp
    src/world/tile/GreenGlazedTerracottaTile.hpp
    src/world/tile/GreenGlazedTerracottaTile.cpp
    src/world/tile/GrindstoneTile.hpp
    src/world/tile/GrindstoneTile.cpp
    src/world/tile/HardenedClayTile.hpp
    src/world/tile/HardenedClayTile.cpp
    src/world/tile/HayBlockTile.hpp
    src/world/tile/HayBlockTile.cpp
    src/world/tile/HeavyWeightedPressurePlateTile.hpp
    src/world/tile/HeavyWeightedPressurePlateTile.cpp
    src/world/tile/HopperTile.hpp
    src/world/tile/HopperTile.cpp
    src/world/tile/IceTile.hpp
    src/world/tile/IceTile.cpp
    src/world/tile/InfoUpdate2Tile.hpp
    src/world/tile/InfoUpdate2Tile.cpp
    src/world/tile/InfoUpdateTile.hpp
    src/world/tile/InfoUpdateTile.cpp
    src/world/tile/InvisiblebedrockTile.hpp
    src/world/tile/InvisiblebedrockTile.cpp
    src/world/tile/IronBarsTile.hpp
    src/world/tile/IronBarsTile.cpp
    src/world/tile/IronBlockTile.hpp
    src/world/tile/IronBlockTile.cpp
    src/world/tile/IronDoorTile.hpp
    src/world/tile/IronDoorTile.cpp
    src/world/tile/IronOreTile.hpp
    src/world/tile/IronOreTile.cpp
    src/world/tile/IronTrapdoorTile.hpp
    src/world/tile/IronTrapdoorTile.cpp
    src/world/tile/JigsawTile.hpp
    src/world/tile/JigsawTile.cpp
    src/world/tile/JukeboxTile.hpp
    src/world/tile/JukeboxTile.cpp
    src/world/tile/JungleButtonTile.hpp
    src/world/tile/JungleButtonTile.cpp
    src/world/tile/JungleDoorTile.hpp
    src/world/tile/JungleDoorTile.cpp
    src/world/tile/JungleFenceGateTile.hpp
    src/world/tile/JungleFenceGateTile.cpp
    src/world/tile/JunglePressurePlateTile.hpp
    src/world/tile/JunglePressurePlateTile.cpp
    src/world/tile/JungleStairsTile.hpp
    src/world/tile/JungleStairsTile.cpp
    src/world/tile/JungleStandingSignTile.hpp
    src/world/tile/JungleStandingSignTile.cpp
    src/world/tile/JungleTrapdoorTile.hpp
    src/world/tile/JungleTrapdoorTile.cpp
    src/world/tile/JungleWallSignTile.hpp
    src/world/tile/JungleWallSignTile.cpp
    src/world/tile/KelpTile.hpp
    src/world/tile/KelpTile.cpp
    src/world/tile/LadderTile.hpp
    src/world/tile/LadderTile.cpp
    src/world/tile/LanternTile.hpp
    src/world/tile/LanternTile.cpp
    src/world/tile/LapisBlockTile.hpp
    src/world/tile/LapisBlockTile.cpp
    src/world/tile/LapisOreTile.hpp
    src/world/tile/LapisOreTile.cpp
    src/world/tile/LavaCauldronTile.hpp
    src/world/tile/LavaCauldronTile.cpp
    src/world/tile/LavaTile.hpp
    src/world/tile/LavaTile.cpp
    src/world/tile/Leaves2Tile.hpp
    src/world/tile/Leaves2Tile.cpp
    src/world/tile/LeavesTile.hpp
    src/world/tile/LeavesTile.cpp
    src/world/tile/LecternTile.hpp
    src/world/tile/LecternTile.cpp
    src/world/tile/LeverTile.hpp
    src/world/tile/LeverTile.cpp
    src/world/tile/LightBlockTile.hpp
    src/world/tile/LightBlockTile.cpp
    src/world/tile/LightBlueGlazedTerracottaTile.hpp
    src/world/tile/LightBlueGlazedTerracottaTile.cpp
    src/world/tile/LightWeightedPressurePlateTile.hpp
    src/world/tile/LightWeightedPressurePlateTile.cpp
    src/world/tile/LimeGlazedTerracottaTile.hpp
    src/world/tile/LimeGlazedTerracottaTile.cpp
    src/world/tile/LitBlastFurnaceTile.hpp
    src/world/tile/LitBlastFurnaceTile.cpp
    src/world/tile/LitFurnaceTile.hpp
    src/world/tile/LitFurnaceTile.cpp
    src/world/tile/LitPumpkinTile.hpp
    src/world/tile/LitPumpkinTile.cpp
    src/world/tile/LitRedstoneLampTile.hpp
    src/world/tile/LitRedstoneLampTile.cpp
    src/world/tile/LitRedstoneOreTile.hpp
    src/world/tile/LitRedstoneOreTile.cpp
    src/world/tile/LitSmokerTile.hpp
    src/world/tile/LitSmokerTile.cpp
    src/world/tile/Log2Tile.hpp
    src/world/tile/Log2Tile.cpp
    src/world/tile/LogTile.hpp
    src/world/tile/LogTile.cpp
    src/world/tile/LoomTile.hpp
    src/world/tile/LoomTile.cpp
    src/world/tile/MagentaGlazedTerracottaTile.hpp
    src/world/tile/MagentaGlazedTerracottaTile.cpp
    src/world/tile/MagmaTile.hpp
    src/world/tile/MagmaTile.cpp
    src/world/tile/MelonBlockTile.hpp
    src/world/tile/MelonBlockTile.cpp
    src/world/tile/MelonStemTile.hpp
    src/world/tile/MelonStemTile.cpp
    src/world/tile/MobSpawnerTile.hpp
    src/world/tile/MobSpawnerTile.cpp
    src/world/tile/MonsterEggTile.hpp
    src/world/tile/MonsterEggTile.cpp
    src/world/tile/MossyCobblestoneStairsTile.hpp
    src/world/tile/MossyCobblestoneStairsTile.cpp
    src/world/tile/MossyCobblestoneTile.hpp
    src/world/tile/MossyCobblestoneTile.cpp
    src/world/tile/MossyStoneBrickStairsTile.hpp
    src/world/tile/MossyStoneBrickStairsTile.cpp
    src/world/tile/MovingblockTile.hpp
    src/world/tile/MovingblockTile.cpp
    src/world/tile/MyceliumTile.hpp
    src/world/tile/MyceliumTile.cpp
    src/world/tile/NetherBrickFenceTile.hpp
    src/world/tile/NetherBrickFenceTile.cpp
    src/world/tile/NetherBrickStairsTile.hpp
    src/world/tile/NetherBrickStairsTile.cpp
    src/world/tile/NetherBrickTile.hpp
    src/world/tile/NetherBrickTile.cpp
    src/world/tile/NetherrackTile.hpp
    src/world/tile/NetherrackTile.cpp
    src/world/tile/NetherreactorTile.hpp
    src/world/tile/NetherreactorTile.cpp
    src/world/tile/NetherWartBlockTile.hpp
    src/world/tile/NetherWartBlockTile.cpp
    src/world/tile/NetherWartTile.hpp
    src/world/tile/NetherWartTile.cpp
    src/world/tile/NormalStoneStairsTile.hpp
    src/world/tile/NormalStoneStairsTile.cpp
    src/world/tile/NoteblockTile.hpp
    src/world/tile/NoteblockTile.cpp
    src/world/tile/OakStairsTile.hpp
    src/world/tile/OakStairsTile.cpp
    src/world/tile/ObserverTile.hpp
    src/world/tile/ObserverTile.cpp
    src/world/tile/ObsidianTile.hpp
    src/world/tile/ObsidianTile.cpp
    src/world/tile/OrangeGlazedTerracottaTile.hpp
    src/world/tile/OrangeGlazedTerracottaTile.cpp
    src/world/tile/PackedIceTile.hpp
    src/world/tile/PackedIceTile.cpp
    src/world/tile/PinkGlazedTerracottaTile.hpp
    src/world/tile/PinkGlazedTerracottaTile.cpp
    src/world/tile/PistonarmcollisionTile.hpp
    src/world/tile/PistonarmcollisionTile.cpp
    src/world/tile/PistonTile.hpp
    src/world/tile/PistonTile.cpp
    src/world/tile/PlanksTile.hpp
    src/world/tile/PlanksTile.cpp
    src/world/tile/PodzolTile.hpp
    src/world/tile/PodzolTile.cpp
    src/world/tile/PolishedAndesiteStairsTile.hpp
    src/world/tile/PolishedAndesiteStairsTile.cpp
    src/world/tile/PolishedDioriteStairsTile.hpp
    src/world/tile/PolishedDioriteStairsTile.cpp
    src/world/tile/PolishedGraniteStairsTile.hpp
    src/world/tile/PolishedGraniteStairsTile.cpp
    src/world/tile/PortalTile.hpp
    src/world/tile/PortalTile.cpp
    src/world/tile/PotatoesTile.hpp
    src/world/tile/PotatoesTile.cpp
    src/world/tile/PoweredComparatorTile.hpp
    src/world/tile/PoweredComparatorTile.cpp
    src/world/tile/PoweredRepeaterTile.hpp
    src/world/tile/PoweredRepeaterTile.cpp
    src/world/tile/PrismarineBricksStairsTile.hpp
    src/world/tile/PrismarineBricksStairsTile.cpp
    src/world/tile/PrismarineStairsTile.hpp
    src/world/tile/PrismarineStairsTile.cpp
    src/world/tile/PrismarineTile.hpp
    src/world/tile/PrismarineTile.cpp
    src/world/tile/PumpkinStemTile.hpp
    src/world/tile/PumpkinStemTile.cpp
    src/world/tile/PumpkinTile.hpp
    src/world/tile/PumpkinTile.cpp
    src/world/tile/PurpleGlazedTerracottaTile.hpp
    src/world/tile/PurpleGlazedTerracottaTile.cpp
    src/world/tile/PurpurBlockTile.hpp
    src/world/tile/PurpurBlockTile.cpp
    src/world/tile/PurpurStairsTile.hpp
    src/world/tile/PurpurStairsTile.cpp
    src/world/tile/QuartzBlockTile.hpp
    src/world/tile/QuartzBlockTile.cpp
    src/world/tile/QuartzOreTile.hpp
    src/world/tile/QuartzOreTile.cpp
    src/world/tile/QuartzStairsTile.hpp
    src/world/tile/QuartzStairsTile.cpp
    src/world/tile/RailTile.hpp
    src/world/tile/RailTile.cpp
    src/world/tile/RedFlowerTile.hpp
    src/world/tile/RedFlowerTile.cpp
    src/world/tile/RedGlazedTerracottaTile.hpp
    src/world/tile/RedGlazedTerracottaTile.cpp
    src/world/tile/RedMushroomBlockTile.hpp
    src/world/tile/RedMushroomBlockTile.cpp
    src/world/tile/RedMushroomTile.hpp
    src/world/tile/RedMushroomTile.cpp
    src/world/tile/RedNetherBrickStairsTile.hpp
    src/world/tile/RedNetherBrickStairsTile.cpp
    src/world/tile/RedNetherBrickTile.hpp
    src/world/tile/RedNetherBrickTile.cpp
    src/world/tile/RedSandstoneStairsTile.hpp
    src/world/tile/RedSandstoneStairsTile.cpp
    src/world/tile/RedSandstoneTile.hpp
    src/world/tile/RedSandstoneTile.cpp
    src/world/tile/RedstoneBlockTile.hpp
    src/world/tile/RedstoneBlockTile.cpp
    src/world/tile/RedstoneLampTile.hpp
    src/world/tile/RedstoneLampTile.cpp
    src/world/tile/RedstoneOreTile.hpp
    src/world/tile/RedstoneOreTile.cpp
    src/world/tile/RedstoneTorchTile.hpp
    src/world/tile/RedstoneTorchTile.cpp
    src/world/tile/RedstoneWireTile.hpp
    src/world/tile/RedstoneWireTile.cpp
    src/world/tile/ReedsTile.hpp
    src/world/tile/ReedsTile.cpp
    src/world/tile/RepeatingCommandBlockTile.hpp
    src/world/tile/RepeatingCommandBlockTile.cpp
    src/world/tile/Reserved6Tile.hpp
    src/world/tile/Reserved6Tile.cpp
    src/world/tile/SandstoneStairsTile.hpp
    src/world/tile/SandstoneStairsTile.cpp
    src/world/tile/SandstoneTile.hpp
    src/world/tile/SandstoneTile.cpp
    src/world/tile/SandTile.hpp
    src/world/tile/SandTile.cpp
    src/world/tile/SaplingTile.hpp
    src/world/tile/SaplingTile.cpp
    src/world/tile/ScaffoldingTile.hpp
    src/world/tile/ScaffoldingTile.cpp
    src/world/tile/SeagrassTile.hpp
    src/world/tile/SeagrassTile.cpp
    src/world/tile/SealanternTile.hpp
    src/world/tile/SealanternTile.cpp
    src/world/tile/SeaPickleTile.hpp
    src/world/tile/SeaPickleTile.cpp
    src/world/tile/ShulkerBoxTile.hpp
    src/world/tile/ShulkerBoxTile.cpp
    src/world/tile/SilverGlazedTerracottaTile.hpp
    src/world/tile/SilverGlazedTerracottaTile.cpp
    src/world/tile/SkullTile.hpp
    src/world/tile/SkullTile.cpp
    src/world/tile/SlimeTile.hpp
    src/world/tile/SlimeTile.cpp
    src/world/tile/SmithingTableTile.hpp
    src/world/tile/SmithingTableTile.cpp
    src/world/tile/SmokerTile.hpp
    src/world/tile/SmokerTile.cpp
    src/world/tile/SmoothQuartzStairsTile.hpp
    src/world/tile/SmoothQuartzStairsTile.cpp
    src/world/tile/SmoothRedSandstoneStairsTile.hpp
    src/world/tile/SmoothRedSandstoneStairsTile.cpp
    src/world/tile/SmoothSandstoneStairsTile.hpp
    src/world/tile/SmoothSandstoneStairsTile.cpp
    src/world/tile/SmoothStoneTile.hpp
    src/world/tile/SmoothStoneTile.cpp
    src/world/tile/SnowLayerTile.hpp
    src/world/tile/SnowLayerTile.cpp
    src/world/tile/SnowTile.hpp
    src/world/tile/SnowTile.cpp
    src/world/tile/SoulSandTile.hpp
    src/world/tile/SoulSandTile.cpp
    src/world/tile/SpongeTile.hpp
    src/world/tile/SpongeTile.cpp
    src/world/tile/SpruceButtonTile.hpp
    src/world/tile/SpruceButtonTile.cpp
    src/world/tile/SpruceDoorTile.hpp
    src/world/tile/SpruceDoorTile.cpp
    src/world/tile/SpruceFenceGateTile.hpp
    src/world/tile/SpruceFenceGateTile.cpp
    src/world/tile/SprucePressurePlateTile.hpp
    src/world/tile/SprucePressurePlateTile.cpp
    src/world/tile/SpruceStairsTile.hpp
    src/world/tile/SpruceStairsTile.cpp
    src/world/tile/SpruceStandingSignTile.hpp
    src/world/tile/SpruceStandingSignTile.cpp
    src/world/tile/SpruceTrapdoorTile.hpp
    src/world/tile/SpruceTrapdoorTile.cpp
    src/world/tile/SpruceWallSignTile.hpp
    src/world/tile/SpruceWallSignTile.cpp
    src/world/tile/StainedGlassPaneTile.hpp
    src/world/tile/StainedGlassPaneTile.cpp
    src/world/tile/StainedGlassTile.hpp
    src/world/tile/StainedGlassTile.cpp
    src/world/tile/StainedHardenedClayTile.hpp
    src/world/tile/StainedHardenedClayTile.cpp
    src/world/tile/StandingBannerTile.hpp
    src/world/tile/StandingBannerTile.cpp
    src/world/tile/StandingSignTile.hpp
    src/world/tile/StandingSignTile.cpp
    src/world/tile/StickypistonarmcollisionTile.hpp
    src/world/tile/StickypistonarmcollisionTile.cpp
    src/world/tile/StickyPistonTile.hpp
    src/world/tile/StickyPistonTile.cpp
    src/world/tile/StoneBrickStairsTile.hpp
    src/world/tile/StoneBrickStairsTile.cpp
    src/world/tile/StonebrickTile.hpp
    src/world/tile/StonebrickTile.cpp
    src/world/tile/StoneButtonTile.hpp
    src/world/tile/StoneButtonTile.cpp
    src/world/tile/StonecutterBlockTile.hpp
    src/world/tile/StonecutterBlockTile.cpp
    src/world/tile/StonecutterTile.hpp
    src/world/tile/StonecutterTile.cpp
    src/world/tile/StonePressurePlateTile.hpp
    src/world/tile/StonePressurePlateTile.cpp
    src/world/tile/StoneSlab2Tile.hpp
    src/world/tile/StoneSlab2Tile.cpp
    src/world/tile/StoneSlab3Tile.hpp
    src/world/tile/StoneSlab3Tile.cpp
    src/world/tile/StoneSlab4Tile.hpp
    src/world/tile/StoneSlab4Tile.cpp
    src/world/tile/StoneSlabTile.hpp
    src/world/tile/StoneSlabTile.cpp
    src/world/tile/StoneStairsTile.hpp
    src/world/tile/StoneStairsTile.cpp
    src/world/tile/StoneTile.hpp
    src/world/tile/StoneTile.cpp
    src/world/tile/StrippedAcaciaLogTile.hpp
    src/world/tile/StrippedAcaciaLogTile.cpp
    src/world/tile/StrippedBirchLogTile.hpp
    src/world/tile/StrippedBirchLogTile.cpp
    src/world/tile/StrippedDarkOakLogTile.hpp
    src/world/tile/StrippedDarkOakLogTile.cpp
    src/world/tile/StrippedJungleLogTile.hpp
    src/world/tile/StrippedJungleLogTile.cpp
    src/world/tile/StrippedOakLogTile.hpp
    src/world/tile/StrippedOakLogTile.cpp
    src/world/tile/StrippedSpruceLogTile.hpp
    src/world/tile/StrippedSpruceLogTile.cpp
    src/world/tile/StructureBlockTile.hpp
    src/world/tile/StructureBlockTile.cpp
    src/world/tile/StructureVoidTile.hpp
    src/world/tile/StructureVoidTile.cpp
    src/world/tile/SweetBerryBushTile.hpp
    src/world/tile/SweetBerryBushTile.cpp
    src/world/tile/TallgrassTile.hpp
    src/world/tile/TallgrassTile.cpp
    src/world/tile/TntTile.hpp
    src/world/tile/TntTile.cpp
    src/world/tile/TorchTile.hpp
    src/world/tile/TorchTile.cpp
    src/world/tile/TrapdoorTile.hpp
    src/world/tile/TrapdoorTile.cpp
    src/world/tile/TrappedChestTile.hpp
    src/world/tile/TrappedChestTile.cpp
    src/world/tile/TripwireHookTile.hpp
    src/world/tile/TripwireHookTile.cpp
    src/world/tile/TripwireTile.hpp
    src/world/tile/TripwireTile.cpp
    src/world/tile/TurtleEggTile.hpp
    src/world/tile/TurtleEggTile.cpp
    src/world/tile/UndyedShulkerBoxTile.hpp
    src/world/tile/UndyedShulkerBoxTile.cpp
    src/world/tile/UnlitRedstoneTorchTile.hpp
    src/world/tile/UnlitRedstoneTorchTile.cpp
    src/world/tile/UnpoweredComparatorTile.hpp
    src/world/tile/UnpoweredComparatorTile.cpp
    src/world/tile/UnpoweredRepeaterTile.hpp
    src/world/tile/UnpoweredRepeaterTile.cpp
    src/world/tile/VineTile.hpp
    src/world/tile/VineTile.cpp
    src/world/tile/WallBannerTile.hpp
    src/world/tile/WallBannerTile.cpp
    src/world/tile/WallSignTile.hpp
    src/world/tile/WallSignTile.cpp
    src/world/tile/WaterlilyTile.hpp
    src/world/tile/WaterlilyTile.cpp
    src/world/tile/WaterTile.hpp
    src/world/tile/WaterTile.cpp
    src/world/tile/WebTile.hpp
    src/world/tile/WebTile.cpp
    src/world/tile/WheatTile.hpp
    src/world/tile/WheatTile.cpp
    src/world/tile/WhiteGlazedTerracottaTile.hpp
    src/world/tile/WhiteGlazedTerracottaTile.cpp
    src/world/tile/WitherRoseTile.hpp
    src/world/tile/WitherRoseTile.cpp
    src/world/tile/WoodenButtonTile.hpp
    src/world/tile/WoodenButtonTile.cpp
    src/world/tile/WoodenDoorTile.hpp
    src/world/tile/WoodenDoorTile.cpp
    src/world/tile/WoodenPressurePlateTile.hpp
    src/world/tile/WoodenPressurePlateTile.cpp
    src/world/tile/WoodenSlabTile.hpp
    src/world/tile/WoodenSlabTile.cpp
    src/world/tile/WoodTile.hpp
    src/world/tile/WoodTile.cpp
    src/world/tile/WoolTile.hpp
    src/world/tile/WoolTile.cpp
    src/world/tile/YellowFlowerTile.hpp
    src/world/tile/YellowFlowerTile.cpp
    src/world/tile/YellowGlazedTerracottaTile.hpp
    src/world/tile/YellowGlazedTerracottaTile.cpp
    src/util/math/Rect2D.hpp
    src/client/renderer/texture/TextureAtlas.hpp
    src/client/renderer/texture/NativeImage.hpp
    src/client/renderer/RenderMaterial.hpp
    src/client/renderer/RenderSystem.cpp
    src/client/renderer/RenderContext.cpp
    src/client/renderer/material/MaterialManager.hpp
    src/client/util/Handle.hpp
    src/util/ConnectionBit.hpp
    src/util/FlammableBit.hpp)

target_compile_definitions(vcraft PUBLIC
    "-DGLFW_INCLUDE_NONE"
    "-DGLFW_INCLUDE_VULKAN"
    "-DGLM_FORCE_DEPTH_ZERO_TO_ONE"

    "-DVULKAN_HPP_DISABLE_IMPLICIT_RESULT_VALUE_CAST"
    "-DVULKAN_HPP_NO_SMART_HANDLE"

    "-DVMA_STATIC_VULKAN_FUNCTIONS"
    "-DVULKAN_HPP_NO_STRUCT_CONSTRUCTORS"
)

target_link_libraries(vcraft glfw vulkan imgui fmt)
add_dependencies(vcraft shaders)

execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/assets ${CMAKE_BINARY_DIR}/assets)